# contra_agent

./: .gitignore  CLAUDE.md  README.md  nohup.out  pyproject.toml  requirements.txt  script.md  setup_server.sh
annotate/: VLM_ANNOTATOR_DESIGN.md  __init__.py  annotation_prompt.txt  download_gemma4.sh  download_gemma4_cn.sh  download_weight.sh  gen_data.py  gen_dpo_data.py  get_text_annotation.py  gui_inspect_dpo.py  gui_validate_final_data.py  instance.py  instance_dpo.py  pipeline.py  prune.py  ram_annotator.py  serve_vlm.sh  vlm_annotator.py
contra/: ENTITIES.md  EVENTS.md  __init__.py  action_space.py  entities.py  events.py  game_state.py  gui_play_human.py  gui_state_inspect.py  inputs.py  replay.py  reward.py  run_npz.py
docs/: _config.yml  index.md
dreamer/: DREAMER_DESIGN.md  VERIFICATION_LOG.md  __init__.py  actor.py  anchor_gen.py  buffer.py  collect.py  compare_modes.py  critic.py  envs.py  models.py  train.py  train_ae.py  train_config.yaml  train_wm.py  verify_actor.py  verify_ae.py  verify_critic.py  verify_modes.py  verify_probe.py  verify_reward.py  verify_reward_plots.py  verify_rssm.py  wm_data.py  world_model.py
experiments_notes/: baseline.md
inspect_action/: action_codebook.py  analyze_action_coverage.py  benchmark_action_table.py  inspect_model.py  inspector.py  learn_codebook.py  monte_carlo_playfun.py  plot_all_hits.py  plot_hp.py  run_sequence.py  save_state.py  test_codebook.py  validate_boss_hit_counters.py
lexicographic/: contra.objectives  learnfun.py  objectives.py  play_human.py  playfun.py
main/: contra_wrapper.py  test.py  (+4 more)
(+440 files in other folders)
